新增启动图片；牛奶女页面细节优化；后台播放音乐（上次提交内容）

--- a/TabedAPP/TabedAPP/Base.lproj/LaunchScreen.storyboard
+++ b/TabedAPP/TabedAPP/Base.lproj/LaunchScreen.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qixi.png" id="QPb-6D-0AE">
+                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qidong1.png" id="QPb-6D-0AE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
@@ -25,6 +25,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="qixi.png" width="458" height="838"/>
+        <image name="qidong1.png" width="458" height="838"/>
     </resources>
 </document>
